--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=movies
+spring.data.mongodb.database=movie-api-db
+spring.data.mongodb.uri =mongodb+srv://ahadansari8182:xTBd2P8FBewodjVM@cluster0.sf1sspf.mongodb.net
+
+
+
+#spring.application.name=movies
+#spring.data.mongodb.database=${env.MONGO_DATABASE}
+#spring.data.mongodb.uri =mongodb+srv://${env.MONGO_USER}:$env.{MONGO_PASSWORD}@${env.MONGO_CLUSTER}
