--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
-MONGO_DATABASE =movie-api-db
 MONGO_USER=ahadansari8182
-MONGO_PASSWORD =xTBd2P8FBewodjVM
-MONGO_CLUSTER =cluster0.sf1sspf.mongodb.net
+MONGO_PASSWORD=Science237
+MONGO_CLUSTER=cluster0.qztbx.mongodb.net
+MONGO_DATABASE=movie-api-db
