--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.database=movie-api-db
-spring.data.mongodb.uri =mongodb+srv://ahadansari8182:xTBd2P8FBewodjVM@cluster0.sf1sspf.mongodb.net
+spring.data.mongodb.uri =mongodb+srv://ahadansari8182:Science237@cluster0.qztbx.mongodb.net/
 
 
 
